not DRY but fixed the display overlap for results page

--- a/public/stylesheets/game.css.css
+++ b/public/stylesheets/game.css.css
@@ -415,17 +415,12 @@ The Actual Results Page
   margin-bottom: 60px;
 }
 /* line 292, ../../app/assets/stylesheets/game.css.scss */
-#full_results #share_line .giant_hand {
-  font-size: 64px;
-  vertical-align: middle;
-}
-/* line 296, ../../app/assets/stylesheets/game.css.scss */
 #full_results #share_line .facebook-button {
   display: inline-block;
   font-size: 16px;
   margin-left: 18px;
 }
-/* line 303, ../../app/assets/stylesheets/game.css.scss */
+/* line 299, ../../app/assets/stylesheets/game.css.scss */
 #full_results table {
   float: left;
   width: 400px;
@@ -435,39 +430,39 @@ The Actual Results Page
   margin-left: 24px;
   border: 1px solid #eee;
 }
-/* line 311, ../../app/assets/stylesheets/game.css.scss */
+/* line 307, ../../app/assets/stylesheets/game.css.scss */
 #full_results table th {
   font-weight: bold;
   padding-top: 6px;
   padding-bottom: 6px;
 }
-/* line 316, ../../app/assets/stylesheets/game.css.scss */
+/* line 312, ../../app/assets/stylesheets/game.css.scss */
 #full_results table .title {
   font-weight: bold;
 }
-/* line 317, ../../app/assets/stylesheets/game.css.scss */
+/* line 313, ../../app/assets/stylesheets/game.css.scss */
 #full_results table td {
   text-align: center;
 }
-/* line 321, ../../app/assets/stylesheets/game.css.scss */
+/* line 317, ../../app/assets/stylesheets/game.css.scss */
 #full_results .caption {
   margin-left: 50px;
   width: 350px;
   text-align: center;
   float: left;
 }
-/* line 327, ../../app/assets/stylesheets/game.css.scss */
+/* line 323, ../../app/assets/stylesheets/game.css.scss */
 #full_results .chart {
   margin-top: 30px;
   float: left;
   border: 1px solid #eee;
   width: 320px;
 }
-/* line 332, ../../app/assets/stylesheets/game.css.scss */
+/* line 328, ../../app/assets/stylesheets/game.css.scss */
 #full_results .chart.large {
   width: 600px;
 }
-/* line 336, ../../app/assets/stylesheets/game.css.scss */
+/* line 332, ../../app/assets/stylesheets/game.css.scss */
 #full_results #chart_indiv_pie {
   float: right;
   height: 462px;
@@ -476,31 +471,31 @@ The Actual Results Page
   margin-top: 43px;
   width: 322px;
 }
-/* line 344, ../../app/assets/stylesheets/game.css.scss */
+/* line 340, ../../app/assets/stylesheets/game.css.scss */
 #full_results h4 {
   margin-top: 30px;
   padding-left: 22px;
   padding-bottom: 8px;
 }
-/* line 349, ../../app/assets/stylesheets/game.css.scss */
+/* line 345, ../../app/assets/stylesheets/game.css.scss */
 #full_results #missed_friends {
   padding-left: 22px;
 }
-/* line 352, ../../app/assets/stylesheets/game.css.scss */
+/* line 348, ../../app/assets/stylesheets/game.css.scss */
 #full_results p {
   font-size: 14px;
   line-height: 1.36em;
   padding-left: 22px;
 }
-/* line 357, ../../app/assets/stylesheets/game.css.scss */
+/* line 353, ../../app/assets/stylesheets/game.css.scss */
 #full_results #next_steps {
   font-size: 16px;
 }
-/* line 360, ../../app/assets/stylesheets/game.css.scss */
+/* line 356, ../../app/assets/stylesheets/game.css.scss */
 #full_results #bottom_spacer {
   height: 30px;
 }
-/* line 363, ../../app/assets/stylesheets/game.css.scss */
+/* line 359, ../../app/assets/stylesheets/game.css.scss */
 #full_results #player_count {
   float: right;
   margin-top: -139px;
@@ -508,24 +503,46 @@ The Actual Results Page
   font-size: 26px;
   line-height: 30px;
 }
-/* line 369, ../../app/assets/stylesheets/game.css.scss */
+/* line 365, ../../app/assets/stylesheets/game.css.scss */
 #full_results #player_count .big_num {
   font-size: 56px;
   line-height: 42px;
   font-weight: bold;
   text-shadow: 0px 1px 0px #333333, 0px -1px 0px white;
 }
+/* line 372, ../../app/assets/stylesheets/game.css.scss */
+#full_results #player_count_small {
+  margin-top: -24px;
+  font-size: 15px;
+}
+/* line 374, ../../app/assets/stylesheets/game.css.scss */
+#full_results #player_count_small .giant_hand {
+  padding-right: 4px;
+}
+/* line 376, ../../app/assets/stylesheets/game.css.scss */
+#full_results #player_count_small .big_num {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: bold;
+  text-shadow: 0px 1px 0px #333333, 0px -1px 0px white;
+}
 
-/* line 378, ../../app/assets/stylesheets/game.css.scss */
+/* line 385, ../../app/assets/stylesheets/game.css.scss */
 .social_links > div {
   display: inline-block;
   padding-left: 8px;
 }
-/* line 381, ../../app/assets/stylesheets/game.css.scss */
+/* line 388, ../../app/assets/stylesheets/game.css.scss */
 .social_links > div iframe {
   border: none;
   overflow: hidden;
   width: 92px !important;
   height: 24px !important;
+  vertical-align: middle;
+}
+
+/* line 398, ../../app/assets/stylesheets/game.css.scss */
+.giant_hand {
+  font-size: 64px;
   vertical-align: middle;
 }
